TODO: fix nav z-index mouseover problem

--- a/mystyle.css
+++ b/mystyle.css
@@ -1,53 +1,84 @@
 body {
-	margin : 0px;
-	background-color : aliceblue;
+	margin: 0px;
+	margin-left: 0px;
+	width: 100%;
+	background-color: aliceblue;
+	font-family: Verdana;
+	outline: 1px solid red;
 }
 
 .header {
-	background-color : #435466;
-	width : 100%;
-	margin : 0px;
-	padding : 10px;
-	box-shadow : 0px 3px 7px;
+	outline: 1px solid yellow;
+	background-color: #282b2d;
+	width: 100%;
+	min-height: 100px;
+	margin: 0px;
+	padding: 10px 0px;
+	box-shadow: 0px 3px 7px;
 }
 
 h1 {
-	width : 40%;
-	margin : auto;
-	color : red;
+	outline: 1px solid orange;
+	width: 40%;
+	height: 100px;
+	line-height: 100px;
+	margin: auto;
+	color: ivory;
+	text-align: center;
 }
 
-.sidebar {
-	float : left;
+.left {
+	outline: 1px solid red;
+	width: 400px;
+	height: 90%;
+	position: absolute;
+	right: 50%;
+}
+
+nav {
+	outline: 1px solid orange;
+	width: 130px;
+	position: absolute;
+	z-index: -1;
+}
+
+button {
+	width: 100px;
+	height: 30px;
+	text-align: left;
+	float: right;
+}
+
+.center {
+	width: 600px;
+	margin: auto;
 }
 
 .main {
-	width : 40%;
-	margin : auto;
-	margin-top: 10px;
-	padding : 5%;
-	box-shadow : 0px 3px 7px gray;
-	background-color : ghostwhite;
+	background-color: ghostwhite;
+	box-shadow: 0px 6px 7px gray;
+	min-height: 600px;
 }
 
 p {
-	width : 80%;
-	margin : auto;
-	padding : 5%;
-	background-color : white;
-	box-shadow : 0px 0px 9px lightgrey;
+	width: 80%;
+	margin: auto;
+	padding: 5%;
+	background-color: white;
+	box-shadow: 0px 1px 7px lightgrey;
 }
 
 .footer {
-	border : 1px solid red;
-	width 100%;
-	margin : 0;
-	background-color: lightgrey;
+	outline: 1px solid red;
+	width: 100%;
+	height: 200px;
+	margin: 0px;
+	background-color: dimgrey;
 }
 
 footer {
-	border : 1px solid yellow;
-	width : 40%; 
-	margin : auto;
-	padding : 5%;
+	outline: 1px solid yellow;
+	margin: auto;
+	background-color: gainsboro;
+	
 }
